fixed tweet text wrapping issues and added error message disappearing on a timeout

--- a/public/styles/show-tweet.css
+++ b/public/styles/show-tweet.css
@@ -28,7 +28,8 @@
 }
 
 .tweet p {
-  padding: 8% 0 8% 4%;
+  padding: 8% 4% 8% 4%;
+  overflow-wrap: break-word;
 }
 
 .tweet footer {
